--- a/bungeni_custom/trunk/themes/ke/css/reset.css
+++ b/bungeni_custom/trunk/themes/ke/css/reset.css
@@ -373,6 +373,31 @@ b, strong {
     z-index: 2;
 }
 
+.template-workspace.section-bungeni-business div#viewlet-above-content {
+	z-index:99 !important;
+	margin-top:35px;
+}
+
+.template-workspace #portal-search {
+    float: right;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index:999999 !important;
+	clear:both;
+}
+.section-bungeni-workspace #portal-search {
+    float: right;
+    margin-top: 0;
+	margin-right:10px;
+	margin-bottom:0px;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index: 2;
+	clear:both;
+}
+
 /*
  * portal-siteactions
  */
@@ -1112,7 +1137,8 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-members .contentActions {
     border: 1px solid #fe0000 !important;
     background: #fff;
-    width: 95%;
+	margin-left:10px;
+    width: 100%;
     margin: 0 auto;
 }
 .contentActions a {
@@ -1746,8 +1772,8 @@ table.listingdescription th,
     border-right: 1px solid #88f;
     border-top: 0 none;
     line-height: 20px !important;
-    text-shadow: 0px 1px 1px #fff;
-    color: #444;
+    text-shadow: 0 0 0 #fff;
+    color: #000;
 }
 .yui-skin-sam .yui-dt-first th {
     height: 20px;
@@ -1978,6 +2004,23 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected {
     line-height: 17px;
 }
 
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
+    background: #21a1ba url(/static/images/w-globalnav-level0-a-first.png) top left repeat-x;
+    color: #000;
+	text-shadow:0 0 0 #fff;
+}
+
+.template-workspace.section-bungeni-workspace table.listing th,
+.template-workspace.section-bungeni-workspace table.listingdescription th,
+.template-workspace.section-bungeni-workspace .stx table th,
+.template-workspace.section-bungeni-workspace .yui-skin-sam .yui-dt-first th {
+    background:#21a1ba url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x !important;
+    text-shadow: 0 0 0  #fff;
+    color: #000;
+}
+
 /*
  * formPanel styles
  */
@@ -2074,9 +2117,11 @@ dl.portalMessage dd {
     margin: 0 auto;
     background: #d8d8d9 url(../images/globalnav-level1-bg.png) bottom left repeat-x;
 }
-.template-workspace.section-bungeni-admin .formPanel #display_form_spacer,
-.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+.template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     background: url(/static/images/w-globalnav-level1-bg.png) bottom left repeat-x;
+}
+.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+    background: url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x;
 }
 .template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     width: 100%;
