--- a/bungeni_custom/trunk/themes/ke/css/reset.css
+++ b/bungeni_custom/trunk/themes/ke/css/reset.css
@@ -2385,6 +2385,10 @@ h4.tabberHeading {
 .section-bungeni-archive .documentContent {
     padding: 0 0 2em !important;
 }
+.template-workspace .contentActions, .template-portal .contentActions { /*toughie*/
+	margin-top:0px !important;
+	padding-top:-20px !important;
+}
 .template-portal .documentDescription {
     font-weight: normal;
 	width:480px;
