Corrected problem with menu rendering, that was resulting in multiple menus occaisonally having the same HTML ID, thus breaking some JS/CSS UI behaviour; problem was a result of the current implementation that was deriving the HTML ID of a menu from the action associated witnh the menu (that was not necessarily unique per menu); dropping action-based ID derivation altogether, replacing with adoption of a convention to directly use (as fallback default, but if needed the HTML ID may be arbitrarily speicifed independently) the python ID that each menu/submenu defines; updating py code and css themes as needed.

--- a/bungeni_custom/trunk/themes/ht/css/reset.css
+++ b/bungeni_custom/trunk/themes/ht/css/reset.css
@@ -1813,6 +1813,7 @@ span.yui-button.yui-link-button span a {
 }
 .template-portal #portal-logo {
     display: block;
+
     margin: 0;
     padding: 0;
     background: #ab1a03 url(../images/haiti.jpg) top left no-repeat;
@@ -1935,8 +1936,8 @@ h4.tabberHeading {
 .template-private_folder ul.contentViews,
 .template-web_pages #plone-contentmenu-actions,
 .template-private_folder #plone-contentmenu-actions,
-.template-web_pages #plone-contentmenu-workflow,
-.template-privateshell_folder #plone-contentmenu-workflow {
+.template-web_pages #context_workflow,
+.template-privateshell_folder #context_workflow {
     display: none;
 }
 .indItem {
