--- a/bungeni_custom/trunk/themes/km/css/reset.css
+++ b/bungeni_custom/trunk/themes/km/css/reset.css
@@ -1823,6 +1823,7 @@ span.yui-button.yui-link-button span a {
  * .template-portal styles.
  */
 .template-portal {
+
     margin: 0;
     text-align: center;
     background: #fff url(../images/bg2.gif) top center repeat-y;
@@ -1974,8 +1975,8 @@ h4.tabberHeading {
 .template-private_folder ul.contentViews,
 .template-web_pages #plone-contentmenu-actions,
 .template-private_folder #plone-contentmenu-actions,
-.template-web_pages #plone-contentmenu-workflow,
-.template-privateshell_folder #plone-contentmenu-workflow {
+.template-web_pages #context_workflow,
+.template-privateshell_folder #context_workflow {
     display: none;
 }
 .indItem {
