--- a/bungeni_custom/trunk/themes/sd/css/reset.css
+++ b/bungeni_custom/trunk/themes/sd/css/reset.css
@@ -880,6 +880,7 @@ input.inputLabelActive {
     z-index: 4;
     height: 1.8em;
     line-height: 1.8em;
+
     border: 0 none;
     border-left: 1px solid #aaa;
 }
@@ -1927,8 +1928,8 @@ h4.tabberHeading {
 .template-private_folder ul.contentViews,
 .template-web_pages #plone-contentmenu-actions,
 .template-private_folder #plone-contentmenu-actions,
-.template-web_pages #plone-contentmenu-workflow,
-.template-privateshell_folder #plone-contentmenu-workflow {
+.template-web_pages #context_workflow,
+.template-privateshell_folder #context_workflow {
     display: none;
 }
 .indItem {
