--- a/bungeni_custom/trunk/themes/za/css/reset.css
+++ b/bungeni_custom/trunk/themes/za/css/reset.css
@@ -1516,6 +1516,7 @@ li.formTab a.selected {
     border-top-right-radius: 5px;
     color: #222 !important;
     background:#fff;
+
 }
 li.formTab a.selected {
     position: relative;
@@ -1962,8 +1963,8 @@ h4.tabberHeading {
 .template-private_folder ul.contentViews,
 .template-web_pages #plone-contentmenu-actions,
 .template-private_folder #plone-contentmenu-actions,
-.template-web_pages #plone-contentmenu-workflow,
-.template-privateshell_folder #plone-contentmenu-workflow {
+.template-web_pages #context_workflow,
+.template-privateshell_folder #context_workflow {
     display: none;
 }
 .indItem {
