--- a/bungeni_custom/trunk/themes/bi/css/reset.css
+++ b/bungeni_custom/trunk/themes/bi/css/reset.css
@@ -55,7 +55,7 @@
 	position:absolute;
 	margin-left:auto;
 	margin-right:auto;
-	background-color:#122d43;
+	background-color:#569954;
 	padding-bottom:6px;
 	border-bottom:1px solid #0561ab !important;
 }
@@ -374,6 +374,30 @@ b, strong {
     z-index: 2;
 }
 
+.template-workspace.section-bungeni-business div#viewlet-above-content {
+	z-index:99 !important;
+	margin-top:35px;
+}
+.template-workspace #portal-search {
+    float: right;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index:999999 !important;
+	clear:both;
+}
+.section-bungeni-workspace #portal-search {
+    float: right;
+    margin-top: 0px;
+	margin-right:10px;
+	margin-bottom:0px;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index: 2;
+	clear:both;
+}
+
 /*
  * portal-siteactions
  */
@@ -423,6 +447,9 @@ div.main-column h1.title {
 .template-workspace.section-bungeni-admin div.main-column h1.title,
 .template-workspace.section-bungeni-workspace div.main-column h1.title {
     color: #222;
+}
+.section-bungeni-workspace #region-content div#content h1:first-child {
+    color: #21a1ba !important;
 }
 div.main-column h1.reportmaintitle,
 div.main-column h1.reportdoctype {
@@ -1113,7 +1140,8 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-members .contentActions {
     border: 1px solid #569954 !important;
     background: #fff;
-    width: 95%;
+	margin-left:10px;
+    width: 100%;
     margin: 0 auto;
 }
 .contentActions a {
@@ -1280,7 +1308,7 @@ div#portal-globalnav ul.level0 li a {
     padding: 0 1em;
     margin: 0 .25em 0 0;
     color: #000;
-	font-weight:bold;
+	font-weight:normal;
     background: #eee;
     border: 1px solid #569954;
     border-bottom: 1px solid #eee;
@@ -1305,6 +1333,9 @@ div#portal-globalnav ul.level0 #secondary li a {
     -moz-border-radius-topright: 0;
 }
 
+.template-portal div#portal-globalnav ul.level0 li#portaltab- a {
+    border-bottom:0;
+}
 .template-portal div#portal-globalnav ul.level0 li#portaltab-business-whats-on a  {
     -moz-border-radius-topleft:5px;
 
@@ -1314,7 +1345,7 @@ div#portal-globalnav ul.level0 #secondary li a {
     border-style:solid;
     border-width:1px;
     color:#222222;
-	font-weight:bold;
+	font-weight:normal;
     font-family:tahoma,verdana,sans-serif;
     font-size:12px;
     margin:0 .25em 0 0;
@@ -1945,9 +1976,6 @@ li.formTab a.selected {
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:hover,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:active,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:hover,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:active,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a.selected,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
@@ -1977,6 +2005,22 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected {
     top: 2px;
     margin: 0 .25em;
     line-height: 17px;
+}
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
+    background: #21a1ba url(/static/images/w-globalnav-level0-a-first.png) top left repeat-x;
+    color: #000;
+	text-shadow:0 0 0 #fff;
+}
+
+.template-workspace.section-bungeni-workspace table.listing th,
+.template-workspace.section-bungeni-workspace table.listingdescription th,
+.template-workspace.section-bungeni-workspace .stx table th,
+.template-workspace.section-bungeni-workspace .yui-skin-sam .yui-dt-first th {
+    background:#21a1ba url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x !important;
+    text-shadow: 0 0 0  #fff;
+    color: #000;
 }
 
 /*
@@ -2075,9 +2119,11 @@ dl.portalMessage dd {
     margin: 0 auto;
     background: #d8d8d9 url(../images/globalnav-level1-bg.png) bottom left repeat-x;
 }
-.template-workspace.section-bungeni-admin .formPanel #display_form_spacer,
-.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+.template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     background: url(/static/images/w-globalnav-level1-bg.png) bottom left repeat-x;
+}
+.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+    background: url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x;
 }
 .template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     width: 100%;
@@ -2340,6 +2386,13 @@ h4.tabberHeading {
 }
 .section-bungeni-archive .documentContent {
     padding: 0 0 2em !important;
+}
+.template-portal .contentActions { /*toughie*/
+	margin-top:0px !important;
+	padding-top:-20px !important;
+}
+.template-workspace.section-bungeni-workspace .contentActions, .template-portal .contentActions { /*toughie*/
+	padding-top:-20px !important;
 }
 .template-portal .documentDescription {
     font-weight: normal;
