--- a/bungeni_custom/trunk/themes/ea/css/reset.css
+++ b/bungeni_custom/trunk/themes/ea/css/reset.css
@@ -466,11 +466,16 @@ div.main-column h2 {
 .template-portal div.main-column h2 {	    
 	/*margin: -4em 0 0.5em;*/	
 }
-.template-workspace.section-bungeni-workspace div.main-column h2,
-.template-workspace.section-bungeni-admin div.main-column h2 {
+.template-workspace.section-bungeni-workspace div.main-column h2 {
     font-weight: bold !important;
     color: #222 !important;
     margin-top: 1em;
+}
+.template-workspace.section-bungeni-admin div.main-column h2,
+.template-workspace.section-bungeni-admin div.main-column h1 {
+    font-weight: bold !important;
+    color: #222 !important;
+    margin-top: 2.5em !important;
 }
 div.main-column h2 span {
     font-size: 75%;
@@ -2392,7 +2397,7 @@ h4.tabberHeading {
     font-weight: normal;
 	width:480px;
 	margin: 3em auto 1em auto;
-/*    text-align: center;*/
+    text-align: center !important;
 }
 .documentEditable {
     margin: 0;
