--- a/bungeni_custom/trunk/themes/ug/css/reset.css
+++ b/bungeni_custom/trunk/themes/ug/css/reset.css
@@ -476,12 +476,19 @@ div.main-column h2 {
 .template-portal div.main-column h2 {	    
 	/*margin: -4em 0 0.5em;*/	
 }
-.template-workspace.section-bungeni-workspace div.main-column h2,
-.template-workspace.section-bungeni-admin div.main-column h2 {
+.template-workspace.section-bungeni-workspace div.main-column h2 {
     font-weight: bold !important;
     color: #222 !important;
     margin-top: 1em;
 }
+
+.template-workspace.section-bungeni-admin div.main-column h2,
+.template-workspace.section-bungeni-admin div.main-column h1 {
+    font-weight: bold !important;
+    color: #222 !important;
+    margin-top: 2.5em !important;
+}
+
 div.main-column h2 span {
     font-size: 75%;
     font-weight: normal;
@@ -1147,7 +1154,7 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-members .contentActions {
     border: 1px solid #6d7a8a !important;
     background: #fff;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
 }
 .contentActions a {
@@ -2400,7 +2407,7 @@ h4.tabberHeading {
     font-weight: normal;
 	width:480px;
 	margin: 3em auto 1em auto;
-/*    text-align: center;*/
+    text-align: center !important;
 }
 .documentEditable {
     margin: 0;
